--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="pt-Br">
     <head>
         <title>Hangman</title>
 
@@ -16,23 +17,40 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="js/roleta.js"></script>
         <script type="text/javascript" src="js/forca.js"></script>
+
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <p>
-            Meus Pontos: <span id="pontos">0</span>
-        </p>
-        <p>
-            Tentativas: <span id="erros">0</span>
-        </p>
-        <p>
-            Letras Usadas: <span id="letras"></span>
-        </p>
-        <p>
-            <input type="text" id="entrada" size="2" maxlength="1" />
-            <button id="enviar">Enviar</button>
-            <button id="novo">Novo Jogo</button>
-        </p>
-        <canvas id="canvas" width="500" height="500"></canvas>
-        <button id="girar">Girar Roleta</button>
+        <div id="wrapper">
+
+            <div id="configuration">
+                <p>
+                    Meus Pontos: <span id="pontos">0</span>
+                </p>
+                <p>
+                    Tentativas: <span id="erros">0</span>
+                </p>
+                <p>
+                    Letras Usadas: <span id="letras"></span>
+                </p>
+                <p>
+                    <input type="text" id="entrada" size="2" maxlength="1" />
+                    <button id="enviar">Enviar</button>
+                    <button id="novo">Novo Jogo</button>
+                </p>
+            </div>
+
+            <div id="display"></div>
+
+            <div id="content">  
+                <div id="canvas-content"> 
+                    <canvas id="canvas" width="500" height="500"></canvas>
+                </div> 
+                <div id="girar">
+                    <button>Girar Roleta</button>
+                </div>   
+            </div>
+
+        </div>
     </body>
 </html>
